<resources>
    <string name="app_name">ToDoList</string>

    <string name="home">خانه</string>
    <string name="search">جست وجو</string>
    <string name="chart">وضعیت پیشرفت</string>

    <string name="category">دسته بندی</string>
    <string name="w_enter_task">لطفا یک کار تعریف کنید</string>
    <string name="w_enter_task2">لطفا اول کار خود را تعریف کنید</string>
    <string name="w_enter_category">لطفا یک نام تعریف کنید</string>
    <string name="text_dialog_question">آیا کار انتخاب شده را انجام داده اید؟</string>
    <string name="text_dialog_category">برای کار وارد شده یک دسته را انتخاب کنید.</string>
    <string name="btn_yes">بله</string>
    <string name="btn_no">خیر</string>
    <string name="btn_ok">تایید</string>
    <string name="btn_exit">خروج</string>
    <string name="btn_exit_cansel">هنوز کار دارم</string>
    <string name="btn_cansel">انصراف</string>
    <string name="manage_category">مدیریت دسته بندی</string>
    <string name="text_manage_category">این دسته ها در صفحه اصلی نمایش داده میشود.</string>
    <string name="new_category">دسته جدید</string>
    <string name="create_new_category">ساختن یک دسته بندی جدید</string>
    <string name="text_exit">کار های امروزم را وارد کردم و میخواهم از برنامه خارج بشوم</string>
    <string name="text_question_delete_category">آیا از پاک شدن دسته مطمئن هستید؟</string>
    <string name="text_advertising">آماده ای خودتو به چالش بکشی، بزن بریم !!</string>
</resources>