<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/margin_between_object"
    android:background="@drawable/simple_background_dialog_question"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/padding_all_screen">

    <ImageView
        android:layout_width="@dimen/_160sdp"
        android:layout_height="@dimen/_160sdp"
        android:src="@drawable/pic_exit" />

    <TextView
        style="@style/text_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/margin_between_object"
        android:layout_marginEnd="@dimen/_10sdp"
        android:justificationMode="inter_word"
        android:text="@string/text_exit" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_between_object"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cansel"
            style="@style/Widget.AppCompat.ActionButton.Overflow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_weight="1"
            android:fontFamily="@font/yakanbakhmedium"
            android:text="@string/btn_exit_cansel"
            android:textColor="@color/bluePromise"
            android:textSize="@dimen/_14ssp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_exit"
            style="@style/Widget.AppCompat.ActionButton.Overflow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/yakanbakhmedium"
            android:text="@string/btn_exit"
            android:textColor="@color/underwaterMoonlight"
            android:textSize="@dimen/_16ssp" />


    </LinearLayout>
</LinearLayout>