<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:gravity="end"
    android:orientation="vertical"
    android:paddingTop="@dimen/padding_all_screen"
    android:paddingBottom="@dimen/padding_all_screen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/padding_all_screen"
        android:paddingEnd="@dimen/padding_all_screen">

        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/vector_back"
            android:tint="@color/black"
            tools:ignore="UseAppTint" />

        <TextView
            style="@style/text_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/manage_category" />
    </LinearLayout>

    <TextView
        style="@style/textTab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_between_object"
        android:background="@color/medicalMask"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:text="@string/text_manage_category"
        android:textColor="@color/black" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_manage_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_all_screen"
                android:layout_marginTop="@dimen/margin_between_object"
                android:layout_marginEnd="@dimen/padding_all_screen"
                android:layoutDirection="rtl"
                tools:itemCount="5"
                tools:listitem="@layout/layout_recycler_view_manage_category" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.AppCompat.ActionButton.Overflow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_object"
                android:layout_marginEnd="@dimen/padding_all_screen"
                android:fontFamily="@font/yakanbakhmedium"
                android:text="@string/new_category"
                android:textColor="@color/underwaterMoonlight"
                android:textSize="@dimen/_14ssp"
                app:icon="@drawable/vector_add"
                app:iconSize="@dimen/_16sdp"
                app:iconTint="@color/underwaterMoonlight" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>